--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.6.0",
-    "eslint": "^7.4.0",
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^4.5.2",
     "jasmine-ajax": "^4.0.0",
