--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "codeceptjs": "^3.0.7",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.6.0",
     "eslint": "^7.30.0",
@@ -33,6 +34,7 @@
     "karma-webpack": "^4.0.2",
     "mini-css-extract-plugin": "^1.6.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "puppeteer": "^10.1.0",
     "sass": "^1.32.12",
     "sass-loader": "^10.1.1",
     "style-loader": "^1.2.1",
