--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start-dev": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "test": "karma start"
+    "test": "karma start",
+    "build-image": "node sharp.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "your_name <your.email@domain.com>",
@@ -37,6 +39,7 @@
     "puppeteer": "^10.1.0",
     "sass": "^1.32.12",
     "sass-loader": "^10.1.1",
+    "sharp": "^0.28.3",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
@@ -45,6 +48,7 @@
     "whatwg-fetch": "^3.2.0"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "idb": "^6.1.2",
     "regenerator-runtime": "^0.13.5",
     "serviceworker-webpack-plugin": "^1.0.1"
