--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "webpack --config webpack.prod.js",
     "test": "karma start",
     "build-image": "node sharp.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "heroku-postbuild": "webpack -p",
+    "e2e": "codeceptjs run --steps",
+    "lint": "eslint ./src"
   },
   "keywords": [],
   "author": "your_name <your.email@domain.com>",
@@ -42,6 +45,7 @@
     "sharp": "^0.28.3",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.0.9",
@@ -50,6 +54,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "idb": "^6.1.2",
+    "lazysizes": "^5.3.2",
     "regenerator-runtime": "^0.13.5",
     "serviceworker-webpack-plugin": "^1.0.1"
   }
