--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^3.3.12",
+    "webpack-command": "^0.5.1",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.0.9",
     "whatwg-fetch": "^3.2.0"
