--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "restaurant-apps",
   "version": "1.0.0",
+  "engines": {
+  	"node": "v12.18.3",
+  	"npm" : "6.14.6"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
